--- a/comp992/paper/comp992.tex
+++ b/comp992/paper/comp992.tex
@@ -19,10 +19,9 @@
 \mainmatter              % start of the contributions
 %
 \title{Fiber feature map based landmark initialization for highly deformable DTI registration}
-\author{Aditya Gupta$^{1,3}$, Matthew Toews$^{2}$, Ravikiran Janardhana$^{4}$, Yogesh Rathi$^{2}$, John Gilmore$^{3}$, Maria Escolar$^{1}$, Martin Styner$^{3,4}$}
+\author{COMP 992 Report by Ravikiran Janardhana$^{1}$ \\ \vspace{2mm} Co-Authors: Aditya Gupta$^{2,4}$, Matthew Toews$^{3}$, Yogesh Rathi$^{3}$, John Gilmore$^{4}$, Maria Escolar$^{2}$, Martin Styner$^{1,4}$}
 
-
-\institute{$^{1}$ Dept Pediatrics, University of Pittsburgh, PA, USA; ${^2}$ Harvard Medical School, Boston MA; ${^3}$ Dept Psychiatry, ${^4}$ Dept Computer Science, University of North Carolina, Chapel Hill, NC}
+\institute{$^{1}$Dept Computer Science, University of North Carolina, Chapel Hill, $^{2}$Dept Pediatrics, University of Pittsburgh, PA, USA; ${^3}$Harvard Medical School, Boston MA; ${^4}$Dept Psychiatry, University of North Carolina, Chapel Hill.}
 
 
 \maketitle              % typeset the title of the contribution
@@ -71,7 +70,18 @@ In this section, we present the steps involved in generating the feature map fro
 %
 \subsubsection{Fiber Tracts Generation}
 %
-The fiber tracts are generated from the raw DWI image and the image mask by performing a 2-tensor unscented kalman filter (ukf) based tractography. Unlike many of the existing techniques, in ukf-based tractography, fiber tracking is formulated as causal estimation; at each step of tracing the fiber, the current estimate of the signal is guided by the previous. To do this, the signal is modeled as a discrete mixture of Watson directional functions and tractography is performed within a filtering framework. Starting from a seed point, each fiber is traced to its termination using an unscented Kalman filter to simultaneously fit the signal and propagate in the most consistent direction. Despite the presence of noise and uncertainty, this provides an accurate estimate of the local structure at each point along the fiber. The in-depth details of the tractography can be found in \cite{malc10}.  While generating the fiber tracts for our experiments, we configured the number of seeds per voxel as 8, seed FA limit as 0.18, minimum FA to continue tractography as 0.12 and branching was suppressed while using multiple tensors. 
+The fiber tracts are generated from the raw DWI image and the image mask by performing a 2-tensor unscented kalman filter (ukf) based tractography. Unlike many of the existing techniques, in ukf-based tractography, fiber tracking is formulated as causal estimation; at each step of tracing the fiber, the current estimate of the signal is guided by the previous. To do this, the signal is modeled as a discrete mixture of Watson directional functions and tractography is performed within a filtering framework. Starting from a seed point, each fiber is traced to its termination using an unscented Kalman filter to simultaneously fit the signal and propagate in the most consistent direction. Despite the presence of noise and uncertainty, this provides an accurate estimate of the local structure at each point along the fiber. The in-depth details of the tractography can be found in \cite{malc10}.  
+
+While generating the fiber tracts, we can configure various parameters, the most important ones being number of seeds per voxel, seed FA limit, minimum FA to continue tractography and branching factor. Figure \ref{fig:parameterConfig} shows the fiber tracts generated for different parameter configurations. Based on visual assessment of the fiber tracts generated, for our experiments, we configured number of seeds per voxel as 8, seed FA limit as 0.18, minimum FA to continue tractography as 0.12 and suppressed branching. The minFA and seedFA are set very low as the FA values are very low in Krabbe cases.
+
+\begin{figure}
+    \centering
+    \subfigure[]{\includegraphics[height=0.20\textheight,width=0.30\textwidth]{images/ukf-a.png}\label{fig:ukfA}}
+    \subfigure[]{\includegraphics[height=0.20\textheight,width=0.30\textwidth]{images/ukf-b.png}\label{fig:ukfB}}
+    \subfigure[]{\includegraphics[height=0.20\textheight,width=0.30\textwidth]{images/ukf-c.png}\label{fig:ukfC}}
+    \caption{The figures show the fiber tracts generated at different parameter configurations. (a) seedFA = 0.30, minFA = 0.25, seedsPerVoxel = 1, (b) seedFA = 0.20, minFA = 0.20, seedsPerVoxel = 4, (c) seedFA = 0.18, minFA = 0.12, seedsPerVoxel = 8.}
+    \label{fig:parameterConfig}
+\end{figure}
 
 %
 \subsubsection{Fiber Segments per voxel}
@@ -83,7 +93,6 @@ In this step, we traverse through all the fiber segments in the fiber tracts gen
 %
 In order to compute the entropy of fiber orientations at a particular voxel, we first need to define what is the fiber orientation at a voxel. Consider the below example in Figure \ref{fig:histogram}, where a single fiber passes through the fiber points p1, p2 and p3 at a particular voxel. The fiber orientation at a fiber point is defined as the direction of the tangent joining its neighboring fiber segment points. At the boundary fiber points, the fiber orientation is defined as the direction of the line connecting it to the previous or subsequent fiber point. The fiber orientation at a voxel can now be defined as a tuple of fiber orientations at the fiber points contained in the voxel.
 
-% Figure 1
 \begin{figure}
 \centering
 \includegraphics[width=1\columnwidth]{images/fiber_orientation_histogram.png}
@@ -117,14 +126,6 @@ where \textit{F$_i$(X)}, \textit{H$_i$(X)} and \textit{fs$_i$(X)} are the featur
 
 This feature map (see Figure \ref{fig:featureMap}) is certain to highlight the crossing fiber landmarks which can further be used for DTI registration.  If one examines the fiber segments per voxel image, it is bound to have higher intensities in those regions where there are large number of single fiber tracts and multiple fiber tracts and lower intensities in regions of fewer or no fiber tracts.  The entropy of fiber orientations image has higher intensities in regions of dispersed single fiber tracts and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in uni-directional single fiber tracts or no fiber tracts regions. Hence, by combining these two, we can negate out the uni-directional single fiber tracts and no fiber tracts regions, thus highlighting the crossing fiber regions or landmarks.
 
-% Figure 3
-%\begin{figure}
-%\includegraphics[width=1\columnwidth]{images/feature_map.png}
-%\centering
-%\caption{Feature maps in normal control subject. Left: Fiber Segments per voxel image; Center:Entropy of fiber orientations per voxel image; Right: the combined feature map image. The regions with crossing fibers are marked with arrows and display a high intensity in the final feature map.}
-%\label{fig:featureMap}
-%\end{figure}
-
 \begin{figure}
     \centering
     \subfigure[]{\includegraphics[height=0.30\textheight,width=0.30\columnwidth]{images/feature_map-a.png}\label{fig:featA}}
@@ -134,6 +135,10 @@ This feature map (see Figure \ref{fig:featureMap}) is certain to highlight the c
     \label{fig:featureMap}
 \end{figure}
 
+%
+\subsubsection{Note on Inconclusive features}
+%
+We also explored other features such as Earth Mover's Distance of Fiber distance histogram in hope of obtaining a pathology invariant feature map. The fiber distance was defined as the spherical distance between weighted individual fiber orientation to strongest fiber orientation at a particular voxel. However, the results produced were inconclusive and hence, we decided to not include it in the feature map.
 
 \subsection{Landmarks with correspondence on feature maps}
 \label{subsec:Correspondence}
@@ -144,7 +149,6 @@ Deformable intensity-based image registration methods employ local optimization 
 
 where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of variance $\sigma^2$ and $\kappa$ is a constant. Image regions centered on $x,y,z$ of size proportional to $\sigma$ are then cropped and spatially normalized via rescaling and reorientation to a local coordinate system~\cite{Allaire:08}, and encoded as an appearance descriptor. Image-to-image matching proceeds by computing nearest neighbors between features extracted in different images, based on the Euclidean distances of appearance descriptors. Note that due to spatial feature normalization, nearest neighbors can be computed despite arbitrary global similarity image transforms (i.e. translation, rotation and isotropic scaling). Finally, the Hough transform is applied to determine a set of correspondences that are inliers of a robust image-to-image similarity transform.
 
-% Figure 4
 \begin{figure}
     \centering
     \subfigure[Normal Control]{\includegraphics[height=0.33\textheight,width=0.49\columnwidth]{images/correspondence-a.png}\label{fig:corrA}}
@@ -155,7 +159,7 @@ where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of v
 
 \subsection{Registration}
 \label{subsec:registration}
-% Figure 4
+
 \begin{figure}
     \centering
     \subfigure[Moving Image - Normal Control]{\includegraphics[height=0.20\textheight,width=0.30\textwidth]{images/RegResult-a.png}\label{fig:RegResultA}}
@@ -176,13 +180,13 @@ To determine the large local deformation field, we first use the landmark corres
 
 The feature maps obtained from the fiber segments per voxel image and the normalized entropy image are shown in figure \ref{fig:featureMap}. For the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers. For the entropy image, the high intensities are regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features results in a feature map highlighting crossing fibers and with lower intensities for the unidirectional single fiber situation. In comparison, FA maps cannot successfully highlight crossing fiber locations as these have often similar intensities as WM regions close to gray with largely dispersed fibers.
 
-The deformation field obtained from the point correspondence provides the required initialization for standard registration algorithms. Since the feature maps have high intensity for the crossing fibers, this helps the point correspondence algorithm to determine good correspondences in spite of the large deformation. Figure \ref{fig:histogram} shows an example of one set of correspondence points. Particularly in pathological cases where it is extremely difficult to even manually determine the landmarks because of the large abnormal deformation, our proposed method gives a considerable advantage.
+The deformation field obtained from the point correspondence provides the required initialization for standard registration algorithms. Since the feature maps have high intensity for the crossing fibers, this helps the point correspondence algorithm to determine good correspondences in spite of the large deformation. Figure \ref{fig:corr} shows an example of one set of correspondence points. Particularly in pathological cases where it is extremely difficult to even manually determine the landmarks because of the large abnormal deformation, our proposed method gives a considerable advantage.
 
-To prove the potential of our method, we select a particular subject with abnormally large lateral ventricles. Figure \ref{fig:corr} shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
+To prove the potential of our method, we select a particular subject with abnormally large lateral ventricles. Figure 5 shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
 
-Using the DWI volumes for the subject and the normal control, we generate the feature maps, as described in \ref{subsec:FeatureMap}. Figure \ref{fig:featureMap} show the image representing the fiber segments per voxel, the normalized entropy and the combined final map. For the image representing the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers, as both capture a large proportion of fiber segments. For the entropy image, the high intensities are regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features results in comparatively lower intensities the unidirectional single fiber situation as compared to crossing fiber situations. Furthermore, locations close or in gray matter display very low intensities in the combined map.  In comparison, FA maps cannot successfully highlight crossing fiber locations as these have often similar intensities as WM regions close to gray with largely dispersed fibers.
+Using the DWI volumes for the subject and the normal control, we generate the feature maps, as described in Section \ref{subsec:FeatureMap}. Figure \ref{fig:featureMap} shows the image representing the fiber segments per voxel, the normalized entropy and the combined final map. For the image representing the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers, as both capture a large proportion of fiber segments. For the entropy image, the high intensities are regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features results in comparatively lower intensities the unidirectional single fiber situation as compared to crossing fiber situations. Furthermore, locations close or in gray matter display very low intensities in the combined map.  In comparison, FA maps cannot successfully highlight crossing fiber locations as these have often similar intensities as WM regions close to gray with largely dispersed fibers.
 
-The combined feature map images for the subject and the normal control are then used as input to determine the point landmark correspondence. The point correspondences are used as inputs to the Gaussian RBF to determine the initial deformation field. This deformation field is used to initialize the demons algorithm applied on the subject and the normal control FA images. Figure \ref{fig:corr} shows the FA images of the subject case (which is the fixed image) and the normal control deformed with the point landmark deformation field and the demons deformation field. Also the figure shows the overlap of these two images to show the performance of the registration. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
+The combined feature map images for the subject and the normal control are then used as input to determine the point landmark correspondence. The point correspondences are used as inputs to the Gaussian RBF to determine the initial deformation field. This deformation field is used to initialize the demons algorithm applied on the subject and the normal control FA images. Figure 5 shows the FA images of the subject case (which is the fixed image) and the normal control deformed with the point landmark deformation field and the demons deformation field. Also the figure shows the overlap of these two images to show the performance of the registration. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
 
 The deformation field obtained from the point correspondence provides the required initialization for standard registration algorithms. Since the feature maps have high intensity for the crossing fibers, this helps the point correspondence algorithm to determine good correspondences in spite of the large deformation. Particularly in pathological cases where it is extremely difficult to even manually determine the landmarks because of the large abnormal deformation, our proposed method gives a considerable advantage.
 
@@ -192,7 +196,6 @@ RegMatch_{r} = \frac{1}{N_{r}} \sum_{i=1}^{N_{r}} |e_{source}.e_{target}|.FA_{ta
 \end{equation}
 representing number of voxels in region $r$. The RegMatch percent values for the comparison of Demons, DTITK and our proposed method for three ROIs (100\% indicates perfect registration) are shown in Figure \ref{fig:Label_Table}. Considering the three ROIs, our proposed shows an improvement of 15.4\% over DTITK and 22.8\% over Demons method. 
 
-% Figure 5
 \begin{figure}[htb]
 \includegraphics[width=1.0\columnwidth]{images/Table_LabelMap.png}
 \centering
