Modified Registration part of the paper

--- a/comp992/paper/comp992.bib
+++ b/comp992/paper/comp992.bib
@@ -330,3 +330,10 @@ pages = "402–407",
 title = "Elastic Registration of Medical Images Using Radial Basis Functions with Compact Support",
 author = "Mike Fornefett and Karl Rohr and H Siegfried Stiehl"
 }
+
+@article{Sharp10,
+  title={Plastimatch-An open source software suite for radiotherapy image processing},
+  author={Sharp, GC and Li, R and Wolfgang, J and Chen, G and Peroni, M and Spadea, MF and Mori, S and Zhang, J and Shackleford, J and Kandasamy, N},
+  journal={Proceedings of the XVI’th International Conference on the use of Computers in Radiotherapy (ICCR), Amsterdam, Netherlands},
+  year={2010}
+}
