--- a/comp992/paper/comp992.tex
+++ b/comp992/paper/comp992.tex
@@ -174,7 +174,7 @@ where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of v
 
 Due to the large variation between the normal control and the subject with enlarged ventricles, a large deformation field is needed to register these images. Registration failed with the standard registration algorithms, including B-spline based (fnirt in FSL package), fluid based (fWarp in FSL), Demons (BRAINSDemonWarp in BRAINS) and also full tensor registration method DTITK within the DTI-Toolkit package. All the above methods failed to provide the large deformation required to register these images, particularly in the regions around the enlarged ventricles (figure \ref{fig:corr}).
 
-To determine the large local deformation field, we first use the landmark correspondences to compute an initial deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. We use  Gaussian radial basis functions (RBF) to determine the initial deformation field as implemented in the plastimatch registration toolkit. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. These properties along with the option of not selecting a polynomial part for RBF, give the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark based deformation field generation in this work, there is lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize a deformable registration like diffeomorphic demons registration on intensity normalized FA images. The results of the combined fields - the point landmark deformation field and the demons deformation field on the FA images are presented in the next section.
+To determine the large local deformation field, we first compute the landmark correspondences described in Section \ref{subsec:Correspondence}. These landmarks are then used in a landmark based image registration method provided by the plastimatch toolkit \cite{Sharp10}. The landmark based registration internally uses non-truncated Gaussian radial basis function (RBF) to make local registrations and generates a deformation field by solving a system of linear equations which is computationally very efficient as compared with algorithms based on complex multidimensional minimization. Also, an independent regularization parameter is defined to control the balance between the fidelity of the alignment of landmark pairs and smoothness of the deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. This property gives the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark based deformation field generation in this work, there is lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize an automatic deformable registration method like diffeomorphic demons registration on intensity normalized FA images. The results of the combined fields - the point landmark deformation field and the demons deformation field on the FA images are presented in the next section.
 
 \section{RESULTS}
 
