Fixed Dr. Pizer changes - part 2

--- a/comp992/paper/comp992.bib
+++ b/comp992/paper/comp992.bib
@@ -337,3 +337,9 @@ author = "Mike Fornefett and Karl Rohr and H Siegfried Stiehl"
   journal={Proceedings of the XVI’th International Conference on the use of Computers in Radiotherapy (ICCR), Amsterdam, Netherlands},
   year={2010}
 }
+
+@article{Edelman97,
+    author = {Shimon Edelman and Nathan Intrator and Tomaso Poggio},
+    title = {Complex Cells and Object Recognition},
+    year = {1997}
+}
