--- a/comp992/paper/comp992.tex
+++ b/comp992/paper/comp992.tex
@@ -190,12 +190,12 @@ Thus, each keypoint is now assigned an image location, scale and orientation. Th
 
 Due to the large variation between the normal control and the subject with enlarged ventricles, a large deformation field is needed to register these images. Registration failed with the standard registration algorithms, including B-spline-based (fnirt in FSL package), fluid-based (fWarp in FSL), Demons (BRAINSDemonWarp in BRAINS) and also full tensor registration method DTITK within the DTI-Toolkit package. All the above methods failed to provide the large deformation required to register these images, particularly in the regions around the enlarged ventricles (figure \ref{fig:corr}).
 
-To determine the large local deformation field, we first compute the landmark correspondences described in Section \ref{subsec:Correspondence}. These landmarks are then used in a landmark-based image registration method provided by the plastimatch toolkit \cite{Sharp10}. The landmark-based registration internally uses non-truncated Gaussian radial basis function (RBF) to make local registrations and generates a deformation field by solving a system of linear equations which is computationally very efficient as compared with algorithms based on complex multidimensional minimization. Also, an independent regularization parameter is defined to control the balance between the fidelity of the alignment of landmark pairs and smoothness of the deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. This property gives the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark-based deformation field generation in this work, there is a lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize an automatic deformable registration method like diffeomorphic Demons registration on intensity normalized FA images. The results of the combined fields, namely the point landmark deformation field and the Demons deformation field on the FA images are presented in the next section.
+In our method, To determine the large local deformation field, we first compute the landmark correspondences described in Section \ref{subsec:Correspondence}. These landmarks are then employed in a landmark-based image registration method provided by the plastimatch toolkit \cite{Sharp10}. The landmark-based registration internally uses non-truncated Gaussian radial basis function (RBF) to make local registrations and generates a deformation field by solving a system of linear equations which is computationally very efficient as compared with algorithms based on complex multidimensional minimization. Also, an independent regularization parameter is defined to control the balance between the fidelity of the alignment of landmark pairs and smoothness of the deformation field. The computed landmarks are in general well distributed over the image and hence have the capability to estimate a global deformation field from these  local landmarks. A Gaussian RBF decreases with growing distance from the landmark and the RBF asymptotically approaches zero. This property gives the desired advantage of decreasing global influence with higher distance from the landmarks. While we selected a straightforward landmark-based deformation field generation in this work, there is a lot of ongoing research in generating deformation fields from landmark points that potentially can improve the performance of our proposed registration approach. Once the deformation field is obtained, this field is used to initialize an automatic deformable registration method like diffeomorphic Demons registration on intensity normalized FA images. The results of the combined fields, namely the point landmark deformation field and the Demons deformation field on the FA images are presented in the next section.
 
 \section{RESULTS}
-Using the DWI volumes for the subject and the normal control, we generate the feature maps, as described in Section \ref{subsec:FeatureMap}. Figure \ref{fig:featureMap} shows the image representing the fiber segments per voxel, the normalized entropy and the combined final map. For the image representing the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers, as both capture a large proportion of fiber segments. For the entropy image, the high intensities are regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features results in comparatively lower intensities the unidirectional single fiber situation as compared to crossing fiber situations. Furthermore, locations close or in gray matter display very low intensities in the combined map.  In comparison, FA maps cannot successfully highlight crossing fiber locations as these have often similar intensities as WM regions close to gray with largely dispersed fibers.
+Using the DWI volumes for the subject and the normal control, we generate the feature maps, as described in Section \ref{subsec:FeatureMap}. Figure \ref{fig:featureMap} shows the image representing the fiber segments per voxel, the normalized entropy and the combined final map. In the image representing the fiber segments per voxel,  high intensity regions are expected and observed in regions of single fiber tracts and crossing fibers, as both capture a large proportion of fiber segments. In the entropy image, the higher intensities are observed in regions of dispersed fiber tracts (e.g., close to gray matter) and crossing fiber tracts (due to greater variation in fiber orientations) and lower intensities in unidirectional single fiber tracts (or in regions with lack of fiber tracts). The combination of  these two features produces an image in which lower intensities are observed in the unidirectional single fiber locations and higher intensities in crossing fiber locations. Furthermore, locations close to or in gray matter also display very low intensities in the combined map.  In comparison, FA maps cannot successfully highlight crossing fiber locations as these often have similar intensities as WM regions close to gray matter.
 
-The combined feature map images for the subject and the normal control are then used as input to determine the point landmark correspondence. The point correspondences are used as inputs to the Gaussian RBF to determine the initial deformation field. This deformation field is used to initialize the Demons algorithm applied on the subject and the normal control FA images. Figure 5 shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly, Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also, the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
+The combined feature map images for the subject and the normal control are then used as an input to determine the point landmark correspondence. The point correspondences are used as inputs to the landmark-based registration method (employs Gaussian RBF internally) to determine the initial deformation field. This deformation field is used to initialize the Demons algorithm applied on the subject and the normal control FA images. Figure 5 shows the FA images of the Krabbe case and the normal control and shows the results of Demons, DTITK and our proposed method. Clearly, Demons and DTITK fail to produce the required deformation to push the corticospinal and the internal capsule tracts towards the necessary locations in the pathological subject. Also, the figure shows the overlap of the target and image registered with our method to show the performance of our method. The regions in orange indicate the WM fiber tracts that are aligned successfully. From this overlap figure, a considerable success in registration is obtained for the major tracts - the genu, splenium and the internal capsule tracts.
 
 To evaluate the registration, we use average regional matching criterion that is tailored to atlas-based analysis methods. The orientation agreement between the principal eigenvectors of the source $e_{source}$ and the target $e_{target}$ weighted with the FA value of the target of each voxel of a particular region is the basis of this criterion. Regions of interest (ROI) on the Krabbe subject are defined representing major fiber tracts. For a ROI $r$, the average regional matching criterion is defined as: 
 \begin{equation}
